# gtk-chaos-game

./: CMakeLists.txt  README.md  builder.ui  chaos_game.gresource.xml.in
resource/: builder.ui
src/: app.c  app.h  main.c  model.c  model.h  util.c  util.h
